--- a/linker_hand_ros2_sdk/linker_hand_ros2_sdk/LinkerHand/config/L6_positions.yaml
+++ b/linker_hand_ros2_sdk/linker_hand_ros2_sdk/LinkerHand/config/L6_positions.yaml
@@ -1,5 +1,5 @@
 LEFT_HAND:
-- ACTION_NAME: 握拳
+- ACTION_NAME: fist
   POSITION:
   - 67
   - 151
@@ -7,7 +7,7 @@ LEFT_HAND:
   - 0
   - 0
   - 0
-- ACTION_NAME: 张开
+- ACTION_NAME: open
   POSITION:
   - 255
   - 179
@@ -16,7 +16,7 @@ LEFT_HAND:
   - 255
   - 255
 RIGHT_HAND:
-- ACTION_NAME: 张开
+- ACTION_NAME: open
   POSITION:
   - 255
   - 70
