--- a/linker_hand_ros2_sdk/package.xml
+++ b/linker_hand_ros2_sdk/package.xml
@@ -4,7 +4,7 @@
   <name>linker_hand_ros2_sdk</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="linker-robot@todo.todo">linker-robot</maintainer>
+  <maintainer email="TODO@gmail.com">linker-robot</maintainer>
   <license>TODO: License declaration</license>
   
   <test_depend>ament_copyright</test_depend>
