--- a/linker_hand_ros2_sdk/linker_hand_ros2_sdk/LinkerHand/config/L25_positions.yaml
+++ b/linker_hand_ros2_sdk/linker_hand_ros2_sdk/LinkerHand/config/L25_positions.yaml
@@ -1,5 +1,5 @@
 LEFT_HAND:
-- ACTION_NAME: 张开
+- ACTION_NAME: Open
   POSITION:
   - 96
   - 255
@@ -27,7 +27,7 @@ LEFT_HAND:
   - 255
   - 255
 RIGHT_HAND:
-- ACTION_NAME: 张开
+- ACTION_NAME: Open
   POSITION:
   - 96
   - 255
@@ -54,7 +54,7 @@ RIGHT_HAND:
   - 255
   - 255
   - 255
-- ACTION_NAME: 握拳
+- ACTION_NAME: Fist
   POSITION:
   - 230
   - 80
