--- a/linker_hand_ros2_sdk/linker_hand_ros2_sdk/LinkerHand/config/setting.yaml
+++ b/linker_hand_ros2_sdk/linker_hand_ros2_sdk/LinkerHand/config/setting.yaml
@@ -1,12 +1,12 @@
-VERSION: 2.2.4 # 新增G20工业版
-LINKER_HAND:  # 手部配置信息
+VERSION: 2.2.4 # Added G20 industrial version
+LINKER_HAND:  # Hand configuration info
   LEFT_HAND:
-    EXISTS: False # 是否存在左手
-    TOUCH: False # 是否有压力传感器
-    CAN: "can0"  # 配置CAN端口 默认can0 如果MODUBS不为"None",则CAN配置失效
-    MODBUS: "None" # 通讯协议是否为485 默认None 如果启动485，则是设备端口 /dev/ttyUSB* CAN配置失效 当前只支持O6/L6.后续版本正在努力增加中
-    JOINT: O6 # 左手型号 O6/L6/L7/L10/L20/G20/L21/L25/
-    NAME: # 默认值，不用修改
+    EXISTS: False # Whether the left hand exists
+    TOUCH: False # Whether there is a pressure sensor
+    CAN: "can0"  # Configure CAN port (default can0). If MODUBS is not "None", CAN config is ignored
+    MODBUS: "None" # Whether the communication protocol is 485. Default None. If 485 is enabled, set to the device port /dev/ttyUSB*. CAN config is ignored. Currently only supports O6/L6; more models coming
+    JOINT: O6 # Left-hand model O6/L6/L7/L10/L20/G20/L21/L25/
+    NAME: # Default values, do not modify
       - joint41
       - joint42
       - joint43
@@ -29,12 +29,12 @@ LINKER_HAND:  # 手部配置信息
       - joint60
     
   RIGHT_HAND:
-    EXISTS: True # 是否存在右手
-    TOUCH: True # 是否有压力传感器
-    CAN: "can0"  # 配置CAN端口 默认can0 如果MODUBS不为"None",则CAN配置失效
-    MODBUS: "None" # 通讯协议是否为485 默认None 如果启动485，则是设备端口 /dev/ttyUSB* CAN配置失效 当前只支持O6/L6.后续版本正在努力增加中
-    JOINT: L6 # 右手型号 O6/L6/L7/L10/L20/G20/L21/L25/
-    NAME:  # 默认值，不用修改
+    EXISTS: True # Whether the right hand exists
+    TOUCH: True # Whether there is a pressure sensor
+    CAN: "can0"  # Configure CAN port (default can0). If MODUBS is not "None", CAN config is ignored
+    MODBUS: "None" # Whether the communication protocol is 485. Default None. If 485 is enabled, set to the device port /dev/ttyUSB*. CAN config is ignored. Currently only supports O6/L6; more models coming
+    JOINT: L6 # Right-hand model O6/L6/L7/L10/L20/G20/L21/L25/
+    NAME:  # Default values, do not modify
       - joint71
       - joint72
       - joint73
@@ -55,4 +55,4 @@ LINKER_HAND:  # 手部配置信息
       - joint88
       - joint89
       - joint90
-PASSWORD: "12345678" # 由于与can通讯，需要激活通讯接口用到系统管理员密码。只有Linux系统需要，windows系统不需要。RS485不需要修改，RS485需要给/dev/ttyUSB* 777权限
+PASSWORD: "12345678" # Since CAN communication is used, a system administrator password is needed to activate the interface. Only required on Linux; not required on Windows. RS485 does not need this, but RS485 requires granting /dev/ttyUSB* 777 permissions
