--- a/examples/setting_info/package.xml
+++ b/examples/setting_info/package.xml
@@ -4,7 +4,7 @@
   <name>setting_info</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="TODO@gmail.com">linkerhand</maintainer>
+  <maintainer email="TODO@gmail.com">realhand</maintainer>
   <license>TODO: License declaration</license>
 
   <depend>rclpy</depend>
