--- a/graphic_display/package.xml
+++ b/graphic_display/package.xml
@@ -4,14 +4,14 @@
   <name>graphic_display</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="TODO@gmail.com">linker-robot</maintainer>
+  <maintainer email="TODO@gmail.com">real-robot</maintainer>
   <license>TODO: License declaration</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
-  <exec_depend>linker_hand_ros2_sdk</exec_depend>
+  <exec_depend>real_hand_ros2_sdk</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
