--- a/gui_control/package.xml
+++ b/gui_control/package.xml
@@ -4,7 +4,7 @@
   <name>gui_control</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="TODO@gmail.com">linker-robot</maintainer>
+  <maintainer email="TODO@gmail.com">real-robot</maintainer>
   <license>TODO: License declaration</license>
 
   <test_depend>ament_copyright</test_depend>
@@ -12,7 +12,7 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
-  <exec_depend>linker_hand_ros2_sdk</exec_depend>
+  <exec_depend>real_hand_ros2_sdk</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
