--- a/real_hand_ros2_sdk/pyproject.toml
+++ b/real_hand_ros2_sdk/pyproject.toml
@@ -1,3 +1,8 @@
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+dependencies = [
+    "realhand-python-sdk>=0.1.0",
+]
+
